add_executable(ChatServer
    AsioIOServicePool.cpp
    AsyncEventDispatcher.cpp
    ChatAsyncEvent.cpp
    ChatTaskEnvelope.cpp
    ChatGrpcClient.cpp
    ChatHandlerRegistrars.cpp
    ChatIngressCoordinator.cpp
    ChatOutboxService.cpp
    ChatRelationService.cpp
    ChatRuntime.cpp
    KafkaAsyncEventBus.cpp
    KafkaConfig.cpp
    RabbitMqConfig.cpp
    RabbitMqTaskBus.cpp
    RedisAsyncEventBus.cpp
    InlineTaskBus.cpp
    ChatSessionService.cpp
    ChatUserSupport.cpp
    GroupMessageService.cpp
    MessageDeliveryService.cpp
    PrivateMessageService.cpp
    QuicSession.cpp
    QuicChatServer.cpp
    TaskDispatcher.cpp
    ChatServer.cpp
    ChatServiceImpl.cpp
    ConfigMgr.cpp
    CServer.cpp
    CSession.cpp
    DistLock.cpp
    LogicSystem.cpp
    MongoDao.cpp
    MongoMgr.cpp
    MsgNode.cpp
    PostgresDao.cpp
    PostgresPool.cpp
    PostgresMgr.cpp
    RedisMgr.cpp
    StatusGrpcClient.cpp
    UserMgr.cpp
    AsioIOServicePool.h
    AsyncEventDispatcher.h
    ChatAsyncEvent.h
    ChatTaskEnvelope.h
    IAsyncEventBus.h
    IAsyncTaskBus.h
    ChatGrpcClient.h
    ChatHandlerRegistrars.h
    ChatIngressCoordinator.h
    ChatOutboxService.h
    ChatRelationService.h
    ChatRuntime.h
    ChatSessionService.h
    ChatUserSupport.h
    GroupMessageService.h
    MessageDeliveryService.h
    PrivateMessageService.h
    QuicSession.h
    QuicChatServer.h
    ChatServiceImpl.h
    ConfigMgr.h
    const.h
    CServer.h
    CSession.h
    data.h
    DistLock.h
    LogicSystem.h
    MongoDao.h
    MongoMgr.h
    MsgNode.h
    KafkaAsyncEventBus.h
    KafkaConfig.h
    RabbitMqConfig.h
    RabbitMqTaskBus.h
    InlineTaskBus.h
    PostgresDao.h
    PostgresPool.h
    PostgresMgr.h
    RedisMgr.h
    RedisAsyncEventBus.h
    TaskDispatcher.h
    Singleton.h
    StatusGrpcClient.h
    UserMgr.h
    config.ini
    chatserver1.ini
    chatserver2.ini
)

set_target_properties(ChatServer PROPERTIES FOLDER "Server")
memochat_configure_server_target(ChatServer)
target_link_libraries(ChatServer PRIVATE ${MEMOCHAT_MONGOCXX_TARGET} ${MEMOCHAT_BSONCXX_TARGET} ${MEMOCHAT_PQXX_TARGET})
if(WIN32)
    target_link_directories(ChatServer PRIVATE
        "C:/Program Files (x86)/Windows Kits/10/Lib/10.0.26100.0/um/x64"
        "C:/Program Files (x86)/Windows Kits/10/Lib/10.0.26100.0/ucrt/x64"
        "D:/VS2026stable/VC/Tools/MSVC/14.50.35717/lib/x64")
    target_link_libraries(ChatServer PRIVATE bcrypt)
endif()
if(MEMOCHAT_ENABLE_KAFKA)
    target_link_libraries(ChatServer PRIVATE ${MEMOCHAT_CPPKAFKA_TARGET})
endif()
if(MSVC)
    target_compile_options(ChatServer PRIVATE /bigobj /Zm200)
endif()
